k8s/k8s_dashboard/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: kubedashboard2.localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard-kong-proxy
              port:
                number: 443
